Bug 13904 - early startup failures are not logged
Summary: early startup failures are not logged
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.10.2
Hardware: All All
: P5 minor (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-18 07:09 UTC by Ralph Wuerthner
Modified: 2019-05-21 09:35 UTC (History)
1 user (show)

See Also:


Attachments
patches for 4.9 (6.35 KB, patch)
2019-04-24 17:13 UTC, Christof Schmitt
metze: review+
cs: review+
Details
patches for 4.10 (4.70 KB, patch)
2019-04-24 17:14 UTC, Christof Schmitt
metze: review+
cs: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Wuerthner 2019-04-18 07:09:52 UTC
Commit c89a33a07a 'debug: Use backends instead of explicitly logging to syslog or file' introduced a regression where early startup failures (e.g. unable to connect to CTDB) are no longer logged because the debug subsystem is not yet fully initialized.

Samba 4.3 and higher is affected by this bug.
Comment 1 Christof Schmitt 2019-04-24 17:13:52 UTC
Created attachment 15092 [details]
patches for 4.9
Comment 2 Christof Schmitt 2019-04-24 17:14:14 UTC
Created attachment 15093 [details]
patches for 4.10
Comment 3 Karolin Seeger 2019-05-16 10:15:51 UTC
Pushed to autobuild-v4-{10,9}-test.
Comment 4 Karolin Seeger 2019-05-21 09:35:08 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!